--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.5.3",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
+    "sass": "^1.26.3",
     "vue": "^2.6.11",
+    "vue-types": "^1.7.0",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
@@ -22,7 +26,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
