--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,25 @@
+name: '5 min deploy'
+
 on:
   schedule:
     - cron: '*/1 * * * *'
+      
+
+
 jobs:
-  deploy:
+  auto-deploy-trigger:
+
     runs-on: ubuntu-latest
+
     steps:
-    - name: Call deploy hook
-      uses: wei/curl@v1
+    - name: checkout
+      uses: actions/checkout@v1
+
+    - name: merge master into production
+      uses: robotology/gh-action-nightly-merge@v1.3.1
       with:
-        args: -X POST https://api.vercel.com/v1/integrations/deploy/QmPCJHVN113SVZ7H2zkXkDaV7kBh3hfV4KL2rTr6dpgdCX/pkT60aMkFJ
+        stable_branch: 'master'
+        development_branch: 'production'
+        allow_ff: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
